# exercises-qt

./: .gitignore  README.md
.github/workflows/: blank.yml  build_and_run_tests.yml  clang-format_workflow.yml
clock_exercise/: .gitignore  ActivationAlarmSwitch.qml  AlarmClockHand.qml  AlarmClockListPage.qml  AlarmItem.qml  AlarmPage.qml  AlarmSettingPage.qml  AlarmSlider.qml  AlarmSwitch.qml  ArrowButton.qml  BackButton.qml  BigButton.qml  CheckBox.qml  Clock.qml  ClockButton.qml  ClockFace.qml  ClockPage.qml  DateNumberField.qml  DateSettingPage.qml  DateUpDownNumberField.qml  DeleteButton.qml  HoursClockHand.qml  LineUnderTitleOfThePage.qml  MinuteClockHand.qml  SectionHeading.qml  StartButton.qml  TickOfTopAlarmButton.qml  TimerButton.qml  TimerPage.qml  TimerSettingPage.qml  TimerUpDownNumberField.qml  TitleOfThePage.qml  TopAlarmButton.qml  alarmitemdata.h  alarmitemmodel.cpp  alarmitemmodel.h  clock_exercise.pro  clockmanager.cpp  clockmanager.h  main.cpp  (+3 more)
cpp_exercises/day2/date/: CMakeLists.txt  date.cpp  date.h
cpp_exercises/day2/date/tests/: CMakeLists.txt  tst_date.cpp
cpp_exercises/day3/phoneBook/: CMakeLists.txt  phonebook.cpp  phonebook.h
cpp_exercises/day3/phoneBook/tests/: CMakeLists.txt  tst_phonebook.cpp
day1/es1/: .gitignore  LocalButton.qml  SwitchButton.qml  button.qml  button.qmlproject  vsws.code-workspace
day1/es2/: Bar.qml  es2.qml  es2.qmlproject
day1/es3/: Chapter.qml  es3.qml  es3.qmlproject
day2/es1/: BarCreationNewCard.qml  Card.qml  es1.qml  es1.qmlproject
day2/es2/: Recipe.qml  RecipeSlot.qml  es2.qml
day3/notes/: Card.qml  main.cpp  main.qml  notes.pro  notesmodel.cpp  notesmodel.h  qml.qrc
day3/recipe/: Recipe.qml  RecipePage.qml  RecipeSlot.qml  RecipesModel.cpp  RecipesModel.h  main.cpp  main.qml  qml.qrc  recipe.pro  recipe_it_IT.ts
median/: main.cpp
sumAndAverage/: main.cpp
tcpClientServer/: CMakeLists.txt
tcpClientServer/include/: abstracttcpclientserver.h  tcpclient.h  tcpserver.h
tcpClientServer/src/: abstracttcpclientserver.cpp  client.cpp  server.cpp  tcpclient.cpp  tcpserver.cpp
tcpClientServer/tests/: CMakeLists.txt  tst_tcpclientserver.cpp
wordsFrequency/: main.cpp
